--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -30,26 +30,7 @@ selection-background-color: rgb(118, 158, 81);</string>
    <property name="styleSheet">
     <string notr="true">background-color: rgb(255, 255, 255);</string>
    </property>
-   <widget class="QTableWidget" name="school_info_tableWidget_2">
-    <property name="geometry">
-     <rect>
-      <x>500</x>
-      <y>90</y>
-      <width>371</width>
-      <height>181</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Mongolian Baiti</family>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 255, 255);</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="cc_logo_icon">
     <property name="geometry">
      <rect>
       <x>30</x>
@@ -65,7 +46,7 @@ selection-background-color: rgb(118, 158, 81);</string>
      <string/>
     </property>
    </widget>
-   <widget class="QFrame" name="frame">
+   <widget class="QFrame" name="info_left_frame">
     <property name="geometry">
      <rect>
       <x>29</x>
@@ -99,7 +80,7 @@ selection-background-color: rgb(118, 158, 81);</string>
       <string notr="true">background-color: rgb(255, 255, 255);</string>
      </property>
     </widget>
-    <widget class="QComboBox" name="comboBox">
+    <widget class="QComboBox" name="select_state">
      <property name="geometry">
       <rect>
        <x>1</x>
@@ -117,8 +98,9 @@ selection-background-color: rgb(118, 158, 81);</string>
      <property name="styleSheet">
       <string notr="true">color: rgb(49, 49, 49);
 background-color: rgb(118, 158, 81);
-selection-background-color: rgb(118, 158, 81);
-selection-color: rgb(49, 49, 49);</string>
+alternate-background-color: rgb(225, 225, 225);
+selection-color: rgb(49, 49, 49);
+selection-background-color: rgb(118, 158, 81);</string>
      </property>
      <property name="insertPolicy">
       <enum>QComboBox::InsertAtBottom</enum>
@@ -133,7 +115,7 @@ selection-color: rgb(49, 49, 49);</string>
       <number>0</number>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QPushButton" name="toggle_name_order">
      <property name="geometry">
       <rect>
        <x>0</x>
@@ -153,7 +135,8 @@ selection-color: rgb(49, 49, 49);</string>
      </property>
      <property name="icon">
       <iconset resource="resources/resources.qrc">
-       <normaloff>:/down-arrow-icon.png</normaloff>:/down-arrow-icon.png</iconset>
+       <normaloff>:/down-arrow-icon.png</normaloff>
+       <selectedon>:/up-arrow-icon.png</selectedon>:/down-arrow-icon.png</iconset>
      </property>
      <property name="autoDefault">
       <bool>true</bool>
@@ -165,7 +148,7 @@ selection-color: rgb(49, 49, 49);</string>
       <bool>true</bool>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_2">
+    <widget class="QPushButton" name="toggle_state_order">
      <property name="geometry">
       <rect>
        <x>220</x>
@@ -185,7 +168,8 @@ selection-color: rgb(49, 49, 49);</string>
      </property>
      <property name="icon">
       <iconset resource="resources/resources.qrc">
-       <normaloff>:/up-arrow-icon.png</normaloff>:/up-arrow-icon.png</iconset>
+       <normaloff>:/up-arrow-icon.png</normaloff>
+       <selectedon>:/down-arrow-icon.png</selectedon>:/up-arrow-icon.png</iconset>
      </property>
      <property name="autoDefault">
       <bool>true</bool>
@@ -198,15 +182,15 @@ selection-color: rgb(49, 49, 49);</string>
      </property>
     </widget>
     <zorder>school_list_tableWidget</zorder>
-    <zorder>pushButton</zorder>
-    <zorder>pushButton_2</zorder>
-    <zorder>comboBox</zorder>
+    <zorder>toggle_name_order</zorder>
+    <zorder>toggle_state_order</zorder>
+    <zorder>select_state</zorder>
    </widget>
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="test">
     <property name="geometry">
      <rect>
-      <x>600</x>
-      <y>420</y>
+      <x>670</x>
+      <y>510</y>
       <width>231</width>
       <height>91</height>
      </rect>
@@ -223,6 +207,128 @@ selection-color: rgb(49, 49, 49);</string>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
+   </widget>
+   <widget class="QFrame" name="info_right_frame">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>90</y>
+      <width>371</width>
+      <height>391</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Plain</enum>
+    </property>
+    <widget class="QTableWidget" name="school_info_tableWidget">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>371</width>
+       <height>181</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Mongolian Baiti</family>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(255, 255, 255);</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="visit_store_button">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>210</y>
+       <width>321</width>
+       <height>71</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Mongolian Baiti</family>
+       <pointsize>14</pointsize>
+      </font>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color:  rgb(255, 255, 255);
+border-style: outset;
+border-width: 2px;
+border-radius: 10px;
+border-color:rgb(118, 158, 81);
+min-width: 10em;
+padding: 6px;
+
+QPushButton#visit_store_button: pressed {
+	background-color: rgb(118, 158, 81);
+    border-style: inset;
+}</string>
+     </property>
+     <property name="text">
+      <string>Visit School Store</string>
+     </property>
+     <property name="autoDefault">
+      <bool>false</bool>
+     </property>
+     <property name="default">
+      <bool>false</bool>
+     </property>
+     <property name="flat">
+      <bool>false</bool>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="plan_route_button">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>290</y>
+       <width>321</width>
+       <height>71</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Mongolian Baiti</family>
+       <pointsize>14</pointsize>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color:  rgb(255, 255, 255);
+border-style: outset;
+border-width: 2px;
+border-radius: 10px;
+border-color:rgb(118, 158, 81);
+min-width: 10em;
+padding: 6px;
+
+QPushButton#visit_store_button: pressed {
+	background-color: rgb(118, 158, 81);
+    border-style: inset;
+}</string>
+     </property>
+     <property name="text">
+      <string>Plan Route</string>
+     </property>
+     <property name="autoDefault">
+      <bool>true</bool>
+     </property>
+     <property name="default">
+      <bool>true</bool>
+     </property>
+     <property name="flat">
+      <bool>false</bool>
+     </property>
+    </widget>
    </widget>
   </widget>
  </widget>
