--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -79,6 +79,9 @@ selection-background-color: rgb(118, 158, 81);</string>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(255, 255, 255);</string>
      </property>
+     <property name="autoScroll">
+      <bool>false</bool>
+     </property>
     </widget>
     <widget class="QComboBox" name="select_state">
      <property name="geometry">
@@ -186,28 +189,6 @@ selection-background-color: rgb(118, 158, 81);</string>
     <zorder>toggle_state_order</zorder>
     <zorder>select_state</zorder>
    </widget>
-   <widget class="QLabel" name="test">
-    <property name="geometry">
-     <rect>
-      <x>670</x>
-      <y>510</y>
-      <width>231</width>
-      <height>91</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Mongolian Baiti</family>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>UCI - College 20,000</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
-    </property>
-   </widget>
    <widget class="QFrame" name="info_right_frame">
     <property name="geometry">
      <rect>
@@ -241,13 +222,22 @@ selection-background-color: rgb(118, 158, 81);</string>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(255, 255, 255);</string>
      </property>
+     <property name="frameShape">
+      <enum>QFrame::Box</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
+     </property>
+     <property name="autoScroll">
+      <bool>false</bool>
+     </property>
     </widget>
     <widget class="QPushButton" name="visit_store_button">
      <property name="geometry">
       <rect>
-       <x>30</x>
-       <y>210</y>
-       <width>321</width>
+       <x>20</x>
+       <y>200</y>
+       <width>331</width>
        <height>71</height>
       </rect>
      </property>
@@ -256,6 +246,9 @@ selection-background-color: rgb(118, 158, 81);</string>
        <family>Mongolian Baiti</family>
        <pointsize>14</pointsize>
       </font>
+     </property>
+     <property name="layoutDirection">
+      <enum>Qt::RightToLeft</enum>
      </property>
      <property name="autoFillBackground">
       <bool>false</bool>
@@ -269,13 +262,23 @@ border-color:rgb(118, 158, 81);
 min-width: 10em;
 padding: 6px;
 
-QPushButton#visit_store_button: pressed {
+QPushButton#visit_store_button: clicked {
 	background-color: rgb(118, 158, 81);
     border-style: inset;
 }</string>
      </property>
      <property name="text">
-      <string>Visit School Store</string>
+      <string>Visit School Store </string>
+     </property>
+     <property name="icon">
+      <iconset resource="resources/resources.qrc">
+       <normaloff>:/school_store_logo.png</normaloff>:/school_store_logo.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>40</width>
+       <height>40</height>
+      </size>
      </property>
      <property name="autoDefault">
       <bool>false</bool>
@@ -290,9 +293,9 @@ QPushButton#visit_store_button: pressed {
     <widget class="QPushButton" name="plan_route_button">
      <property name="geometry">
       <rect>
-       <x>30</x>
+       <x>20</x>
        <y>290</y>
-       <width>321</width>
+       <width>331</width>
        <height>71</height>
       </rect>
      </property>
@@ -301,6 +304,9 @@ QPushButton#visit_store_button: pressed {
        <family>Mongolian Baiti</family>
        <pointsize>14</pointsize>
       </font>
+     </property>
+     <property name="layoutDirection">
+      <enum>Qt::RightToLeft</enum>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color:  rgb(255, 255, 255);
@@ -317,7 +323,17 @@ QPushButton#visit_store_button: pressed {
 }</string>
      </property>
      <property name="text">
-      <string>Plan Route</string>
+      <string>Plan Route </string>
+     </property>
+     <property name="icon">
+      <iconset resource="resources/resources.qrc">
+       <normaloff>:/plan_route_logo.png</normaloff>:/plan_route_logo.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>45</width>
+       <height>45</height>
+      </size>
      </property>
      <property name="autoDefault">
       <bool>true</bool>
