--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -3,5 +3,7 @@
         <file>CC_logo.png</file>
         <file>down-arrow-icon.png</file>
         <file>up-arrow-icon.png</file>
+        <file>plan_route_logo.png</file>
+        <file>school_store_logo.png</file>
     </qresource>
 </RCC>
