--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -5,5 +5,6 @@
         <file>up-arrow-icon.png</file>
         <file>plan_route_logo.png</file>
         <file>school_store_logo.png</file>
+        <file>CC_logo_mini-removebg.png</file>
     </qresource>
 </RCC>
