alignment of schoolStore.ui to mainWindow.ui

--- a/schoolStore.ui
+++ b/schoolStore.ui
@@ -13,6 +13,13 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">color: rgb(49, 49, 49);
+background-color: rgb(255, 255, 255);
+alternate-background-color: rgb(225, 225, 225);
+selection-color: rgb(49, 49, 49);
+selection-background-color: rgb(118, 158, 81);</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QFrame" name="frame_5">
     <property name="geometry">
@@ -44,8 +51,8 @@ color: rgb(0, 0, 0);</string>
      </property>
      <property name="font">
       <font>
-       <family>Bahnschrift</family>
-       <pointsize>10</pointsize>
+       <family>Mongolian Baiti</family>
+       <pointsize>11</pointsize>
       </font>
      </property>
      <property name="focusPolicy">
@@ -98,6 +105,12 @@ selection-background-color: rgb(225, 225, 225);
        <height>41</height>
       </rect>
      </property>
+     <property name="font">
+      <font>
+       <family>Mongolian Baiti</family>
+       <pointsize>11</pointsize>
+      </font>
+     </property>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(225, 225, 225);
 color: rgb(0, 0, 0);
@@ -131,6 +144,12 @@ color: rgb(0, 0, 0);
        <width>201</width>
        <height>41</height>
       </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Mongolian Baiti</family>
+       <pointsize>11</pointsize>
+      </font>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(225, 225, 225);
@@ -193,7 +212,7 @@ color: rgb(0, 0, 0);
      </property>
      <property name="font">
       <font>
-       <family>Bahnschrift</family>
+       <family>Mongolian Baiti</family>
       </font>
      </property>
      <property name="styleSheet">
@@ -247,9 +266,8 @@ color: rgb(0, 0, 0);</string>
         </property>
         <property name="font">
          <font>
-          <family>Bahnschrift</family>
+          <family>Mongolian Baiti</family>
           <pointsize>11</pointsize>
-          <weight>50</weight>
           <bold>false</bold>
          </font>
         </property>
@@ -306,8 +324,8 @@ color: rgb(0, 0, 0);</string>
      </property>
      <property name="font">
       <font>
-       <family>Bahnschrift</family>
-       <pointsize>11</pointsize>
+       <family>Mongolian Baiti</family>
+       <pointsize>12</pointsize>
       </font>
      </property>
      <property name="focusPolicy">
@@ -315,10 +333,10 @@ color: rgb(0, 0, 0);</string>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(255, 255, 255);
-color: rgb(0, 0, 0);
-alternate-background-color: rgb(225, 225, 225);
-selection-background-color: rgb(159, 11, 25);
-selection-color: rgb(0, 0, 0);</string>
+color: rgb(49, 49, 49);
+alternate-background-color: rgb(240, 240, 240);
+selection-color: rgb(49, 49, 49);
+selection-background-color: rgb(118, 158, 81);</string>
      </property>
      <property name="horizontalScrollBarPolicy">
       <enum>Qt::ScrollBarAlwaysOff</enum>
