--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -129,7 +129,7 @@ selection-background-color: rgb(118, 158, 81);</string>
      </property>
      <property name="icon">
       <iconset resource="resources/resources.qrc">
-       <normaloff>:/up-arrow-icon.png</normaloff>:/up-arrow-icon.png</iconset>
+       <normaloff>:/arrow_down-removebg.png</normaloff>:/arrow_down-removebg.png</iconset>
      </property>
      <property name="autoDefault">
       <bool>true</bool>
@@ -161,8 +161,7 @@ selection-background-color: rgb(118, 158, 81);</string>
      </property>
      <property name="icon">
       <iconset resource="resources/resources.qrc">
-       <normaloff>:/up-arrow-icon.png</normaloff>
-       <selectedon>:/up-arrow-icon.png</selectedon>:/up-arrow-icon.png</iconset>
+       <normaloff>:/arrow_down-removebg.png</normaloff>:/arrow_down-removebg.png</iconset>
      </property>
      <property name="autoDefault">
       <bool>true</bool>
@@ -262,7 +261,7 @@ selection-background-color: rgb(118, 158, 81);</string>
      </property>
      <property name="icon">
       <iconset resource="resources/resources.qrc">
-       <normaloff>:/down-arrow-icon.png</normaloff>:/down-arrow-icon.png</iconset>
+       <normaloff>:/arrow_up-removebg.png</normaloff>:/arrow_up-removebg.png</iconset>
      </property>
      <property name="autoDefault">
       <bool>true</bool>
@@ -294,8 +293,7 @@ selection-background-color: rgb(118, 158, 81);</string>
      </property>
      <property name="icon">
       <iconset resource="resources/resources.qrc">
-       <normaloff>:/down-arrow-icon.png</normaloff>
-       <selectedon>:/down-arrow-icon.png</selectedon>:/down-arrow-icon.png</iconset>
+       <normaloff>:/arrow_up-removebg.png</normaloff>:/arrow_up-removebg.png</iconset>
      </property>
      <property name="autoDefault">
       <bool>true</bool>
@@ -414,7 +412,7 @@ border-color:rgb(118, 158, 81);
 min-width: 10em;
 padding: 6px;
 
-QPushButton#visit_store_button: pressed {
+QPushButton#plan_route_button: pressed {
 	background-color: rgb(118, 158, 81);
     border-style: inset;
 }</string>
@@ -452,10 +450,10 @@ QPushButton#visit_store_button: pressed {
       </rect>
      </property>
      <property name="frameShape">
-      <enum>QFrame::StyledPanel</enum>
+      <enum>QFrame::Box</enum>
      </property>
      <property name="frameShadow">
-      <enum>QFrame::Raised</enum>
+      <enum>QFrame::Plain</enum>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
