--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -10,5 +10,9 @@
         <file>bubble-removebg.png</file>
         <file>plan_route_logo-removebg.png</file>
         <file>school_store_logo-removebg.png</file>
+        <file>arrow_down.png</file>
+        <file>arrow_down-removebg.png</file>
+        <file>arrow_up.png</file>
+        <file>arrow_up-removebg.png</file>
     </qresource>
 </RCC>
