addition of adminmenu.ui UI

--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -14,5 +14,6 @@
         <file>arrow_down-removebg.png</file>
         <file>arrow_up.png</file>
         <file>arrow_up-removebg.png</file>
+        <file>menu-removebg.png</file>
     </qresource>
 </RCC>
